force-app/main/default/objects/ucinn_ascendv2__Physician_Care__c/ucinn_ascendv2__Physician_Care__c.object-meta.xml
<CustomObject>
    <description>Physician that has been caring for the patient during a hospital visit.</description>
    <label>Physician Care</label>
    <nameField>
        <label>Physician Care Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physician Care</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>