force-app/main/default/objects/ucinn_ascendv2__Physician_Care__c/fields/ucinn_ascendv2__Hospital_Visit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hospital_Visit__c</fullName>
    <label>Hospital Visit</label>
    <referenceTo>ucinn_ascendv2__Hospital_Visit_v2__c</referenceTo>
    <relationshipLabel>Physician Care</relationshipLabel>
    <relationshipName>Physician_Care_Hospital_Visit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>