force-app/main/default/objects/ucinn_ascendv2__Physician_Care__c/fields/ucinn_ascendv2__Physician__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Physician Care</relationshipLabel>
    <relationshipName>Physician_Care_Physician</relationshipName>
    <type>Lookup</type>
</CustomField>