force-app/main/default/objects/ucinn_ascendv2__Physician_Care__c/fields/ucinn_ascendv2__Physician_Care_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician_Care_Name_Auto_Number__c</fullName>
    <displayFormat>PC-{0000000}</displayFormat>
    <label>Physician Care Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>